--- a/thrift-u/app/globals.css
+++ b/thrift-u/app/globals.css
@@ -2,7 +2,7 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #000000;
 }
 
 @theme inline {
@@ -12,10 +12,10 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   :root {
-    --background: #eeeeee;
-    --foreground: #000000;
+    --background: #000000;
+    --foreground: #ffffff;
   }
 }
 
@@ -25,4 +25,9 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-
+.center {
+  color: var(--foreground);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
