--- a/thrift-u/app/globals.css
+++ b/thrift-u/app/globals.css
@@ -31,3 +31,63 @@ body {
   flex-direction: column;
   align-items: center;
 }
+
+.signuplogin {
+  color: var(--foreground);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  min-height: 100dvh;
+}
+
+.login-box {
+  position: relative;
+  width: min(30em, 60dvw);
+  height: min(30em, 70dvh);
+  color: var(--background);
+  background-color: var(--foreground);
+  border-color: #c84b31;
+  border-width: 0.5rem;
+  border-radius: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+h1 {
+  margin-bottom: min(50px, 5dvh);
+  font-size: 2.5rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+.input-box {
+  width: min(15em, 30dvw);
+  color: var(--foreground);
+  margin: 5px 0;
+  margin-bottom: 20px;
+  border: 5px solid white;
+  border-radius: 10px;
+  background-color: white;
+  overflow: hidden;
+}
+
+.input-box:focus {
+  background-color: beige;
+}
+
+.button {
+  width: min(5em, 15dvw);
+  border-radius: 10px;
+  background-color: #c84b31;
+  margin: 5px;
+  overflow: hidden;
+}
+
+.button:hover{
+  background-color: hwb(10 19% 50%);
+}
