established connection and added temp components

--- a/thrift-u/app/globals.css
+++ b/thrift-u/app/globals.css
@@ -65,6 +65,13 @@ h1 {
   text-align: center;
 }
 
+h2 {
+  font-size: 1.5rem;
+  font-weight: bolder;
+  text-align: center;
+}
+
+
 .input-box {
   width: min(15em, 30dvw);
   color: var(--foreground);
