--- a/thrift-u/app/globals.css
+++ b/thrift-u/app/globals.css
@@ -30,6 +30,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 .signuplogin {
@@ -59,13 +60,14 @@ body {
 }
 
 h1 {
-  margin-bottom: min(20px, 6dvh);
+  margin: 1rem;
   font-size: 2.5rem;
   font-weight: bolder;
   text-align: center;
 }
 
 h2 {
+  margin: 1rem;
   font-size: 1.5rem;
   font-weight: bolder;
   text-align: center;
