Styled the homepage to pull, sort, and display items properly

--- a/thrift-u/app/globals.css
+++ b/thrift-u/app/globals.css
@@ -43,6 +43,20 @@
   --radius-xl: calc(var(--radius) + 4px);
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
+/* For Internet Explorer and older Edge */
+body {
+  -ms-overflow-style: none;
+}
+
+/* For Firefox */
+html {
+  scrollbar-width: none;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     --background: #000000;
